# RAG---Retrieval-Augmented-Generation

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/text_files/: sample_text.txt
notebook/: document.ipynb  embedding.ipynb  vectorDB.ipynb
